org.mmisw.ontmd: Ontology Metadata Manager and Voc2RDF
Carlos Rueda  -  http://marinemetadata.org

ChangeLog

2009-05-23
	- Moved most of metadata management to iserver ontmd module.
	- Integrated retrieval of metadata and data: operation getOntologyContents
	Basic functionality in place. Note that all contents are retrieven in a single call;
	TODO: implement a paging mechanism.
	
	Next: display data in appropriate format according to "type" of ontology; we basically
	have the following cases: vocabulary (a la voc2rdf), mapping (a la vine), and the others.
	I'm planning on using the omv:usedOntologyEngineeringTool property to explicitly
	assign it to ontologies created by voc2rdf and vine (I just created the related resources
	in the Omv and OmvMmi vocabularies (see ont module).
	
	
2009-05-22
	- Author subtree now includes all usernames (if user is logged)
	
	- DataPanel now using the iserver-based getEntities operation
	
	
2009-05-18
	- OntMdServiceImpl: fixed a recently introduced bug in getOntologyInfoFromRegistry:
		prepareOntologyInfo was not called in the "new mechanism"
		
	- Login: Capture role when user logs in.
	
	- OntologyUploader: if user logged in is an administrator, a special handling is done to
	  allow the submission of an ontology (either brand new, or new version) to be associated
	  to another userId. 
	
2009-05-13
	- Moved types from ...client related with the proper metadata editor to new package ...client.metadata:
		MainPanel
		MetadataGroupPanel
		MetadataPanel
		OntologyPanel
		ResourceTypeWidget
		
	- Removed unused types:
		voc2rdf.rpc.Voc2RdfService
		voc2rdf.rpc.Voc2RdfServiceAsync
		
	- Preparing portal dispatch:
		I created a new module org.mmisw.iserver, which I'm starting to use here to support
		the portal interface and eventually other operations as the refactoring progresses.
		See sibling project org.mmisw.iserver.
	
	
2009-05-11
	- Preparations to show ontology data in view only mode.